# cv_challenge

./: .gitignore  CMakeLists.txt  README.md  config.h.in
cmake/Modules/: build_external_project.cmake
include/cv_challenge/: bucket_manager.h  color_bucket.h  image_loader.h  label.h  label_applier.h
src/: bucket_manager.cpp  color_bucket.cpp  image_loader.cpp  label_applier.cpp  main.cpp
